--- a/TrAISformer/pyproject.toml
+++ b/TrAISformer/pyproject.toml
@@ -11,6 +11,8 @@ torch = "^2.1.2"
 matplotlib = "^3.8.2"
 numpy = "^1.26.3"
 tqdm = "^4.66.1"
+ipykernel = "^6.29.2"
+pyyaml = "^6.0.1"
 
 
 [build-system]
