--- a/FishingBoatsPrediction/pyproject.toml
+++ b/FishingBoatsPrediction/pyproject.toml
@@ -13,6 +13,8 @@ nbformat = "^5.10.4"
 clearml = "^1.17.1"
 numpy = "1.26.4"
 pandas = "^2.2.3"
+scipy = "^1.15.2"
+pyproj = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
