--- a/FishingBoatsPrediction/pyproject.toml
+++ b/FishingBoatsPrediction/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "1.26.4"
 pandas = "^2.2.3"
 scipy = "^1.15.2"
 pyproj = "^3.7.1"
+kaleido = "0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
