--- a/FishingBoatsPrediction/src/configs/default_config.yaml
+++ b/FishingBoatsPrediction/src/configs/default_config.yaml
@@ -1,11 +1,27 @@
-device: cpu # gpu or cpu
+device: gpu # gpu or cpu
+
+# AISPreprocessor
+target_freq_in_minutes: 10
+trajectory_sequence_len: 16 #96
+max_trajectory_sequence_len_to_predict: 8
+min_trajectory_sequence_len_to_predict: 4
+rotate_trajetories: True
+# cols = AISColumnNames()
+synthetic_ratio: 0.8
+prediction_buffer: 1 
+validation_size_ratio: 0.15 # from 0 to 1
+test_size_ratio: 0.15 # from 0 to 1
 
 # FishingAISDataset
-dataset_dir: data/datasets
-lat_size: 250
-lon_size: 270
-sog_size: 32
-cog_size: 72
+# dataset_dir: data/datasets
+lat_size: 32
+lon_size: 32
+sog_size: 8
+cog_size: 16
+# lat_size: 250
+# lon_size: 270
+# sog_size: 32
+# cog_size: 72
 # sum shouuld be devided by 2^3 = 8
 
 # AISUNet
@@ -13,7 +29,7 @@ base_channels: 32
 time_dim: 128
 
 # AISNoiseScheduler
-num_timesteps: 1000 # 1000
+num_timesteps: 1000
 beta_start: 0.0001
 beta_end: 0.02
 schedule: linear
@@ -21,7 +37,7 @@ schedule: linear
 # AIStableDiffusionTrainer
 learning_rate: 0.0006
 weight_decay: 0.1
-num_epochs: 1
+num_epochs: 100
 eta_min: 0.000001
 batch_size: 2 # 32
 use_snr_weighting: True
