--- a/FishingBoatsPrediction/pyproject.toml
+++ b/FishingBoatsPrediction/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Ukhatov Alexander <alexander.ukhatov@gmail.com>"]
 readme = "README.md"
+packages = [{ include = "fishingboatsprediction", from = "." }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
