--- a/FishingBoatsAnomalyDetection/pyproject.toml
+++ b/FishingBoatsAnomalyDetection/pyproject.toml
@@ -36,6 +36,9 @@ statsmodels = "^0.14.4"
 sqlalchemy = "^2.0.41"
 contextily = "^1.6.2"
 psycopg2-binary = "^2.9.10"
+pycircstat = "^0.0.2"
+nose = "^1.3.7"
+importlib = "^1.0.4"
 
 [build-system]
 requires = ["poetry-core"]
