--- a/FishingBoatsAnomalyDetection/pyproject.toml
+++ b/FishingBoatsAnomalyDetection/pyproject.toml
@@ -39,6 +39,8 @@ psycopg2-binary = "^2.9.10"
 pycircstat = "^0.0.2"
 nose = "^1.3.7"
 importlib = "^1.0.4"
+seaborn = "^0.13.2"
+xgboost = "^3.0.2"
 
 [build-system]
 requires = ["poetry-core"]
